# voice-prompt-tool

./: .gitignore  ART_ASSETS_BRIEF.md  PACKAGE_README.md  README.md  REQUIREMENTS.md  desktop.ps1  ensure-models.ps1  launch-desktop.ps1  launch_desktop.bat  pyproject.toml  run.ps1  setup.ps1  start-ollama.ps1  stop-desktop.ps1  stop-ollama.ps1  stop_desktop.bat
src/voice_prompt_tool/: __init__.py  asr.py  asr_ab_compare.py  cli.py  clipboard.py  desktop_app.py  desktop_audio_duck.py  desktop_layout.py  desktop_ollama.py  desktop_processing.py  desktop_progress.py  desktop_recorder.py  desktop_settings.py  desktop_text_injection.py  desktop_usage_log.py  desktop_vocab.py  desktop_warmup.py  ollama_rewriter.py  ollama_transcript_corrector.py  paths.py  pipeline.py  prompt_rewriter.py  qwen3_asr.py  recorder.py  rewrite_guard.py  sensevoice_asr.py  text_polisher.py  transcript_corrector.py
